# voting

./: Anchor.toml  README.md  admin.json  package.json
app/: package-lock.json  package.json
app/src/: Mint.tsx  Proposal.tsx  Vote.tsx  Wallet.tsx  idl.json  index.tsx  nft_vote.ts
app/src/anchor/: index.ts  nft_vote.ts
app/src/mint/: GetAllNfts.tsx  MintNFT.tsx  index.tsx
app/src/proposal/: GetAllProposal.tsx  GetProposalByClientId.tsx  GetProposalByPubkey.tsx  NewProposal.tsx  index.tsx
app/src/vote/: GetAllVotes.tsx  GetVotesByProposal.tsx  Vote.tsx  index.tsx
programs/nft-vote/: Cargo.toml
programs/nft-vote/src/: lib.rs
tests/: nft-vote.ts
